--- a/c3po/src/main/resources/application.properties
+++ b/c3po/src/main/resources/application.properties
@@ -19,3 +19,9 @@ security.jwt.expiration-ms=3600000
 
 spring.ai.openai.enabled=false
 spring.profiles.active=local
+
+# 错误处理配置
+server.error.whitelabel.enabled=false
+spring.mvc.throw-exception-if-no-handler-found=true
+# 不要禁用资源映射，否则会导致无限重定向
+# spring.web.resources.add-mappings=false
