--- a/c3po/src/main/resources/application.properties
+++ b/c3po/src/main/resources/application.properties
@@ -21,7 +21,14 @@ spring.ai.openai.enabled=false
 spring.profiles.active=local
 
 # 错误处理配置
+# 禁用默认的白标签错误页面，使用自定义的 GlobalExceptionHandler
 server.error.whitelabel.enabled=false
-spring.mvc.throw-exception-if-no-handler-found=false
-# 不要禁用资源映射，否则会导致无限重定向
-# spring.web.resources.add-mappings=false
+# 当没有找到处理器时抛出异常，而不是发送 404 响应
+spring.mvc.throw-exception-if-no-handler-found=true
+# 禁用静态资源映射（如果启用，404 会被静态资源处理器拦截）
+spring.web.resources.add-mappings=false
+# 在错误响应中包含异常信息（仅开发环境）
+server.error.include-exception=false
+server.error.include-message=always
+server.error.include-stacktrace=never
+server.error.include-binding-errors=always
