--- a/c3po/src/main/resources/application-local.properties
+++ b/c3po/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=${POSTGRES_PASSWORD:}
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA & Hibernate (local)
