feat: 实现AI学习助手功能及对话记录管理
- 添加AI学习助手核心功能（智能答疑、知识点总结、学习路径推荐、复习提醒）
- 实现上下文摘取策略，自动提取学生、课程、作业等信息
- 集成DeepSeek API，支持智能对话
- 添加对话记录管理功能（查看、更新、删除、清空）
- 创建Python测试脚本 test_ai_assistant.py
- 更新API文档，添加AI助手相关接口说明

新增文件：
- assistant模块：DTO、实体、服务、控制器
- scripts/python/test_ai_assistant.py：完整的测试套件
- 配置文件：DeepSeek API配置

--- a/c3po/src/main/resources/application.properties
+++ b/c3po/src/main/resources/application.properties
@@ -20,6 +20,14 @@ security.jwt.expiration-ms=3600000
 spring.ai.openai.enabled=false
 spring.profiles.active=local
 
+# DeepSeek AI Configuration
+ai.deepseek.api-key=sk-560bf6f681c84284adca285c2835b96d
+ai.deepseek.base-url=https://api.deepseek.com
+ai.deepseek.model=deepseek-chat
+ai.deepseek.max-tokens=2048
+ai.deepseek.temperature=0.7
+ai.deepseek.timeout-seconds=60
+
 # 错误处理配置
 # 禁用默认的白标签错误页面，使用自定义的 GlobalExceptionHandler
 server.error.whitelabel.enabled=false
